--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hw_callbacks_enumeration_context_traveller_end",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha specs"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "devDependencies": {
     "mocha": "^5.0.5"
-  }
+  },
+  "description": ""
 }
